fix: adding text overflow to card title

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2717,6 +2717,11 @@ div#BlogPostsFloatingBlock {
   height: 100%;
 }
 
+.item-card > .item-content h3 {
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+
 .item-card > .item-image {
   min-height: 220px;
   position: relative;
